--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
     margin: 0;
     padding: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #e0ecf2;
 }
 
 .container {
@@ -19,6 +22,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    height: 10%;
 }
 
 #madLibOutput {
@@ -42,5 +46,22 @@ footer {
 
 .penguin {
     font-family: 'penguin';
+    font-size: 3vh;
+    font-weight: bolder;
+    color: 	#2b32ac;
 
+}
+
+.gradient {
+    background-image: linear-gradient(#1B23E9, #44D2FF);
+}
+
+.grad {
+    background-image: linear-gradient(#44d2ff, #1b23e9);
+}
+
+@media only screen  (max-width: 740px) {
+    .penguin {
+        font-size: 3.5vh;
+    }
 }
